# mw-auto-updater

./: .gitignore  CLAUDE.md  README.md  analyze_impact.py  config.toml  mw_upgrade_check.py  php-upgrade-check.sh  pyproject.toml
1_config/: README.md  run.py
2_fetch/: README.md  run.py
2_fetch/data/: php-8.3-changes.toml
3_analyze/: README.md  run.py
data/: php-8.3-changes.json  php-8.4-changes.json  php-8.4-changes.toml  php-8.5-changes.json  php-8.5-changes.toml
docs/: parallel-agent-strategy.md
